Rename project Api to AirportReportApi.Core and test to .Tests

--- a/AirportReportApi/AirportReportApi/AirportReportApi.Core.csproj
+++ b/AirportReportApi/AirportReportApi/AirportReportApi.Core.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <AssemblyName>AirportReportApi</AssemblyName>
+    <RootNamespace>Api</RootNamespace>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'https' " />
