--- a/AirportReportApi/AirportReportApi.Tests/AirportReportApi.Tests.csproj
+++ b/AirportReportApi/AirportReportApi.Tests/AirportReportApi.Tests.csproj
@@ -6,6 +6,8 @@
     <Nullable>enable</Nullable>
 
     <IsPackable>false</IsPackable>
+
+    <RootNamespace>ApiTests</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
