Update controller name, namespace, and csproj folder names

--- a/AirportReportApi/AirportReportApi.Tests/AirportReportApi.Tests.csproj
+++ b/AirportReportApi/AirportReportApi.Tests/AirportReportApi.Tests.csproj
@@ -7,7 +7,7 @@
 
     <IsPackable>false</IsPackable>
 
-    <RootNamespace>ApiTests</RootNamespace>
+    <RootNamespace>ApiReportApi.Tests</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
