--- a/AirportReportApi/AirportReportApi/AirportReportApi.Core.csproj
+++ b/AirportReportApi/AirportReportApi/AirportReportApi.Core.csproj
@@ -5,7 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <AssemblyName>AirportReportApi</AssemblyName>
-    <RootNamespace>Api</RootNamespace>
+    <RootNamespace>AirportReportApi.Core</RootNamespace>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'https' " />
