Refactoring controller, service, and repo

--- a/AirportReportApi/AirportReportApi.Tests/AirportReportApi.Tests.csproj
+++ b/AirportReportApi/AirportReportApi.Tests/AirportReportApi.Tests.csproj
@@ -23,4 +23,12 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AirportReportApi\AirportReportApi.Core.csproj" />
+  </ItemGroup>
+
 </Project>
